slides are not fixed height on small screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -32,6 +32,11 @@ h1 {
   letter-spacing: 0.5em;
   text-shadow: 0px 4px 4px rgba(150, 150, 150, 1);
   margin-bottom: 41px;
+  @media (max-width: $screen-sm-min) {
+    font-size: 23px;
+    margin-bottom: 20px;
+    text-shadow: 0px 1px 2px rgba(150, 150, 150, 1);
+  }
 }
 
 h2, h3, h4, a, i, span {
@@ -63,6 +68,10 @@ ul {
       overflow: auto;
       .centered {
         position: relative;
+        height: auto;
+        top: 0;
+        left: 0;
+        @include translate(0, 0);
       }
     }
   }
@@ -85,8 +94,6 @@ ul {
     width: 100%;
   }
 }
-
-
 
 .bg {
   position: absolute;
@@ -185,10 +192,17 @@ ul {
     color: $grey_text;
     max-width: 1144px;
     margin: 0 auto;
-    font-size: 1.5em;
+    font-size: 24px;
     font-family: serif;
     letter-spacing: 0.025em;
     line-height: 1.9em;
+    @media (max-width: $screen-sm-min) {
+      font-size: 16px;
+    }
+  }
+
+  #spruce_bough {
+    width: 100%;
   }
 }
 
@@ -278,7 +292,10 @@ ul {
     height: 164px;
   }
   .footer {
-    padding-bottom: 15px;
+    position: absolute;
+    @media (max-width: $screen-sm-min) {
+      position: relative;
+    }
     #contact-info {
       margin: 0 auto;
       width: 70%;
@@ -289,6 +306,10 @@ ul {
         border-left: 1px solid #555555;
         color: $grey_text;
         a { color: $grey_text; }
+        @media (max-width: $screen-sm-min) {
+          float: none;
+          width: auto;
+        }
         &:first-of-type {
           border: none;
         }
